--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 <meta charset ="utf-8">
 
 <title>Home | Honey Moon Coffee Co.</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
 
 <link rel="stylesheet" type="text/css" href="home.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
 
 <div id="header">
-	<img id="header_logo" src="images/header_logo_green.png">
+	<a href="?"><img id="header_logo" src="images/logo_icon.png"></a>
 	<h1>HOME</h1>
 	<img id="menu_icon" src="images/menu.png">
 </div>
@@ -27,15 +27,15 @@
 		<li><h1><a href="#">About</a></h1></li>
 		<li><h1><a href="#">Coffee</a></h1></li>
 		<li><h1><a href="#">Food</a></h1></li>
+		<li><h1><a href="#">Gallery</a></h1></li>
 		<li><h1><a href="#">Catering</a></h1></li>
 		<li><h1><a href="#">Contact</a></h1></li>
-		<li><h1><a href="#">News</a></h1></li>
 	</ul>
 </div>
 
 <div id="dew_1" class="main">
 	<img src="images/logo_green.png" id="logo_green" class="bg_sm">
-	<iframe frameborder="0" height="600px" width="100%" 
+	<iframe frameborder="0" height="710px" width="100%"
     src="https://youtube.com/embed/p6QPL7eIlIc?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=p6QPL7eIlIc" frameborder="0" allowfullscreen>
   </iframe>
 	<img src="images/dew_1_sm.jpg" class="bg_sm">
