Add desktop menu

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 <div id="header">
 	<a href="?"><img id="header_logo" src="images/logo_icon.png"></a>
 	<h1>HOME</h1>
-	<img id="menu_icon" src="images/menu.png" onclick="mobile_menu()">
+	<img id="menu_icon" src="images/menu.png" onclick="menu()">
 </div>
 
 <div id="menu">
