Fix mobile view and menus

--- a/home.html
+++ b/home.html
@@ -60,24 +60,20 @@
 </div>
 
 <div id="dew_2" class="main">
-	<img src="images/dew_2.jpg" class="bg_lg">
-	<img src="images/dew_2_sm.jpg" class="bg_sm">
 	<div class="content">
 		<img src="images/coffee.png">
-		<h3>Hello,</h3>
-		<h1>Coffee Lovers</h1>
-		<h3>Honey Moon is a coffee company located in Evansville</h3>
-		<h3>We specialize in ______ along with more ______</h3>
-		<h3>Served with a side of ______</h3>
-		<h3 id="menu_button"><a href="#">See our menu</a></h3>
+		<div id="about">
+			<h3>Hello,</h3>
+			<h1>Coffee Lovers</h1>
+			<h3>Honey Moon is a coffee company located in Evansville</h3>
+			<h3>We specialize in ______ along with more ______</h3>
+			<h3>Served with a side of ______</h3>
+		</div>
 	</div>
 </div>
 
-<div id="dew_4" class="main">
-	<img src="images/dew_4.jpg" class="bg_lg">
-	<img src="images/dew_4_sm.jpg" class="bg_sm">
-	<div class="content">
-	</div>
+<div id="dew_3" class="main">
+		<h2 class="menu_button"><a href="#">Coffee Menu</a></h2>
+		<h2 class="menu_button"><a href="#">Food Menu</a></h2>
 </div>
-
 </body>
