--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
 <div id="menu">
 	<h1 id="menu_title">Menu</h1>
 	<ul>
-		<li><h1><a href="#dew_3">About</a></h1></li>
-		<li><h1><a href="#">Coffee</a></h1></li>
+		<li><h1><a href="#dew_1">About</a></h1></li>
+		<li><h1><a href="#dew_3">Coffee</a></h1></li>
 		<li><h1><a href="#">Food</a></h1></li>
 		<li><h1><a href="#">Gallery</a></h1></li>
 		<li><h1><a href="#">Catering</a></h1></li>
@@ -53,21 +53,15 @@
 	</ul>
 </div>
 
-<ul class="accordion" data-accordion>
-
-<li class="accordion-navigation">
-    <a href="#panel1a">Accordion 1</a>
-<div id="panel1a" class="content active main">
+<div id="dew_1" class="main">
 	<!--iframe class="desktop" frameborder="0" height="720px" width="100%" src="https://youtube.com/embed/p6QPL7eIlIc?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&playlist=p6QPL7eIlIc" frameborder="0" allowfullscreen>
   </iframe-->
 	<div class="mobile">
 		<img src="images/logo_green.png" id="logo_green">
   </div>
 </div>
-</li>
 
-<li class="accordion-navigation">
-<div id="panel2a" class="content active">
+<div id="dew_2" class="main">
 	<div class="content">
 		<img src="images/coffee.png">
 		<div id="about">
@@ -79,7 +73,6 @@
 		</div>
 	</div>
 </div>
-</li>
 
 <div id="dew_3" class="main">
 		<h2 class="menu_button"><a href="#">Coffee Menu</a></h2>
