--- a/home.html
+++ b/home.html
@@ -44,10 +44,10 @@
     <div id="menu">
       <h1 id="menu_title">Menu</h1>
       <ul>
-        <li><h1><a href="#dew_1">About</a></h1></li>
+        <li><h1><a href="#dew_2">About</a></h1></li>
         <li><h1><a href="#dew_3">Coffee</a></h1></li>
         <li><h1><a href="#">Food</a></h1></li>
-        <li><h1><a href="#">Gallery</a></h1></li>
+        <li><h1><a href="#dew_4">Gallery</a></h1></li>
         <li><h1><a href="#">Catering</a></h1></li>
         <li><h1><a href="#">Contact</a></h1></li>
       </ul>
@@ -70,9 +70,8 @@
     		<div id="about">
     			<h3>Hello,</h3>
     			<h1>Coffee Lovers</h1>
-    			<h3>Honey Moon is a coffee company located in Evansville</h3>
-    			<h3>We specialize in ______ along with more ______</h3>
-    			<h3>Served with a side of ______</h3>
+    			<h3>Honey Moon is a coffee company located in Evansville.</h3>
+                <h3>Together, we are creating a space where people can pause and appreciate each other over curated drinks, our unique moon food menu, and artisanal ice cream.</h3>
     		</div>
     	</div>
     </div>
