Atom beautify fix

--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="icons/apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
@@ -31,57 +32,61 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-  </head>
+</head>
 
-  <body>
+<body>
 
     <div id="header">
-      <a href="?"><img id="header_logo" src="images/logo_icon.png"></a>
-      <h1>HOME</h1>
-      <img id="menu_icon" src="images/menu.png" onclick="menu()">
+        <a href="?"><img id="header_logo" src="images/logo_icon.png"></a>
+        <h1>HOME</h1>
+        <img id="menu_icon" src="images/menu.png" onclick="menu()">
     </div>
 
     <div id="menu">
-      <h1 id="menu_title">Menu</h1>
-      <ul>
-        <li><h1><a href="#dew_2">About</a></h1></li>
-        <li><h1><a href="#dew_3">Coffee</a></h1></li>
-        <li><h1><a href="#">Food</a></h1></li>
-        <li><h1><a href="#dew_4">Gallery</a></h1></li>
-        <li><h1><a href="#">Catering</a></h1></li>
-        <li><h1><a href="#">Contact</a></h1></li>
-      </ul>
+        <h1 id="menu_title">Menu</h1>
+        <ul>
+            <li>
+                <h1><a href="#dew_2">About</a></h1></li>
+            <li>
+                <h1><a href="#dew_3">Coffee</a></h1></li>
+            <li>
+                <h1><a href="#">Food</a></h1></li>
+            <li>
+                <h1><a href="#dew_4">Gallery</a></h1></li>
+            <li>
+                <h1><a href="#">Catering</a></h1></li>
+            <li>
+                <h1><a href="#">Contact</a></h1></li>
+        </ul>
     </div>
 
     <div id="dew_1">
-      <video autoplay muted loop id="intro_video" class="desktop">
+        <video autoplay muted loop id="intro_video" class="desktop">
         <source src="video/Moon_landing.mp4" type="video/mp4">
       </video>
-      <div class="hexagon desktop">
-        <div class="hexTop"></div>
-        <div class="hexBottom"></div>
-      </div>
-    	<img src="images/logo_green.png" id="logo_green" class="mobile">
+        <div class="hexagon desktop">
+            <div class="hexTop"></div>
+            <div class="hexBottom"></div>
+        </div>
+        <img src="images/logo_green.png" id="logo_green" class="mobile">
     </div>
 
     <div id="dew_2" class="main">
-    	<div class="content">
-    		<img src="images/coffee.png">
-    		<div id="about">
-    			<h3>Hello,</h3>
-    			<h1>Coffee Lovers</h1>
-    			<h3>Honey Moon is a coffee company located in Evansville.</h3>
+        <div class="content">
+            <img src="images/coffee.png">
+            <div id="about">
+                <h3>Hello,</h3>
+                <h1>Coffee Lovers</h1>
+                <h3>Honey Moon is a coffee company located in Evansville.</h3>
                 <h3>Together, we are creating a space where people can pause and appreciate each other over curated drinks, our unique moon food menu, and artisanal ice cream.</h3>
-    		</div>
-    	</div>
+            </div>
+        </div>
     </div>
 
     <div id="dew_4" class="main">
-    	<iframe src="http://lightwidget.com/widgets/c48f549e85c55171806466561bbaaa53.html"
-    					scrolling="no" allowtransparency="true" class="lightwidget-widget"
-    					style="width: 80%; border: 0; overflow: hidden;">
+        <iframe src="http://lightwidget.com/widgets/c48f549e85c55171806466561bbaaa53.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 80%; border: 0; overflow: hidden;">
     	</iframe>
     </div>
-  </body>
+</body>
 
 </html>
