Add menu button and scroll navigation

--- a/home.html
+++ b/home.html
@@ -46,15 +46,15 @@
         <h1 id="menu_title">HOME</h1>
         <ul>
             <li>
-                <h1><a href="#dew_2">ABOUT</a></h1></li>
+                <h1><a href="#" scrollTo="dew_2">ABOUT</a></h1></li>
             <li>
-                <h1><a href="#">MENU</a></h1></li>
+                <h1><a href="docs/menu.pdf">MENU</a></h1></li>
             <li>
-                <h1><a href="#dew_4">GALLERY</a></h1></li>
+                <h1><a href="#" scrollTo="dew_4">GALLERY</a></h1></li>
             <li>
                 <h1><a href="#">RESERVE</a></h1></li>
             <li>
-                <h1><a href="#footer">CONTACT</a></h1></li>
+                <h1><a href="#" scrollTo="footer">CONTACT</a></h1></li>
         </ul>
     </div>
 
@@ -83,6 +83,9 @@
                         <h3>Together, we are creating a space where people can pause and appreciate each other over curated drinks, our unique moon food menu, and artisanal ice cream.</h3>
                     </div>
                 </div>
+            </div>
+            <div class="menu-button">
+              <a class="button large menu-button-link" href="docs/menu.pdf"><h3>See Our Menu</h3></a>
             </div>
     </div>
 
