--- a/home.html
+++ b/home.html
@@ -102,9 +102,9 @@
         <button class="close-button" data-close aria-label="Close Accessible Modal" type="button">
           <span aria-hidden="true">&times;</span>
         </button>
-        <form method="POST" action="email-script.php">
-          <label for="email">Email:</label>
-            <input type="text" name="email" id="email" />
+        <form>
+          <label>Email:</label>
+            <input type="text" />
             <input type="submit" value="Ok" />
         </form>
     </div>
